Corrected naming, less in-your-face colors

--- a/html/line_series_test.html
+++ b/html/line_series_test.html
@@ -2,5 +2,5 @@
 <title>Line Series Testing</title>
 <body></body>
 <script src='http://d3js.org/d3.v3.min.js'></script>
-<script src='http://localhost:8000/conf.js'></script>
-<script src='line_series.js' />
+<script src='../conf.js'></script>
+<script src='../line_series.js'></script>
