--- a/html/node_layout_test.html
+++ b/html/node_layout_test.html
@@ -2,5 +2,5 @@
 <title>Node Layout Testing</title>
 <body></body>
 <script src='http://d3js.org/d3.v3.min.js'></script>
-<script src='conf.js'></script>
-<script src='node_layout.js' />
+<script src='../conf.js'></script>
+<script src='../node_layout.js'></script>
